# SER

./: .dockerignore  CHANGELOG.md  Dockerfile  INSTALL.md  MANIFEST.in  README.md  RELEASE.md  SUMMARY.md  pyproject.toml
.github/workflows/: docker-publish.yml  github-pages.yml  publish-to-pypi.yml
conda/: meta.yaml
docs/: README.md  SETUP.md  index.html
examples/: example_distributed_svd.py  example_federated_svd.py  example_ser.py
ser/: __init__.py  distributed_svd.py  federated_svd.py  svd_embedding_regression.py
tests/: __init__.py  test_distributed_svd.py  test_federated_svd.py  test_ser.py
